@@ -1,3 +1,8 @@
+2004-02-15  Paul Brook  <paul@codesourcery.com>
+
+	PR fortran/13433
+	* gfortran.fortran-torture/execute/straret.f90: New test.
+
 2004-02-14  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/execute/20030120-3.c: Remove duplicate of 920415-1.c.
